--- a/index.html
+++ b/index.html
@@ -93,6 +93,35 @@
         </div>
     </main>
 
+    <div id="chatbot-container">
+        <p id="chatbot-label">ChatBot</p>
+
+        <button id="chatbot-toggle" aria-label="Abrir Chatbot">
+            <img src="chatbot.gif" alt="Ícone de Chatbot" class="chatbot-icon">
+        </button>
+        
+        <div id="chatbot-box">
+            <div id="chat-header">
+                Chat Suporte | Cursos Técnicos
+                <button id="chat-close" aria-label="Fechar Chat">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div id="chat-messages">
+                <div class="message bot-message">
+                    Olá! Sou seu assistente de cursos da EE Alexandre de Gusmão.
+                    <br><br>
+                    Pergunte sobre **duração**, **requisitos**, **mercado** ou sobre um curso específico (**Administração**, **Enfermagem**, etc.)!
+                </div>
+            </div>
+            <div id="chat-input-container">
+                <input type="text" id="user-input" placeholder="Digite sua pergunta...">
+                <button id="send-btn" aria-label="Enviar">
+                    <i class="fas fa-paper-plane"></i>
+                </button>
+            </div>
+        </div>
+    </div>
     <footer>
         <p>Endereço da Escola: <a href="https://www.google.com/maps/search/Rua+Cisplatina,+298,+Ipiranga,+S%C3%A3o+Paulo%2FSP" target="_blank">Rua Cisplatina, 298, Ipiranga, São Paulo/SP</a></p>
     </footer>
